@@ -7,23 +7,23 @@ AUX live-2009.06.02-libdeps.patch 2833 RMD160 80f07321bada4d5b4eef24543247f0dc2c
 AUX live-2009.09.28-buildorder.patch 1070 RMD160 c4481e744986254f0f435130479cc1bb7e1ca5b5 SHA1 a29327e0b07daa6ee73c469b994c7982f38c628b SHA256 0c143995cbba68bffd1d7720943500320e59894e587bf951611db9992380e07f
 AUX live-recursive.patch 433 RMD160 f70734114f7423f48693f71c5b0f0ae85c337090 SHA1 87526904f6e69696f6fbf41a2313f1a43c51871a SHA256 6347a54046cf02671666bf74a3dbb54ebb898adafe9670abecebe86e6d870288
 DIST live.2011.06.16.tar.gz 477340 RMD160 57741f9e3339a3586a5f88002ce48ba8e5cad145 SHA1 bf6610c46bd8ea6730f81290d6eb7b64756729aa SHA256 08b776a28c0a385d83556d5ce3910bf8a32acf67d20022feade0a24d9033bac4
-EBUILD live-2011.06.16.ebuild 3650 RMD160 6ad15d7249e9593dcf6018bdbb519a48b2a0437f SHA1 2f4f9dbb55f8e69db2c8129ba7ca9f1b02f52999 SHA256 46d0c7a5cf4a8fa0afc13d345770a83cafa99d2b3c45ed9916d66b7316e17463
-MISC ChangeLog 18700 RMD160 05575acb49f8f8d0e6e0410e58d356414e2ff0dc SHA1 bb4fdf8adf2169042ce832b226e72009bcf6c693 SHA256 d2bbd0eb3c573df27e47bb4bd2072d2702c72462b4a515f1d3144707cc0564d7
+EBUILD live-2011.06.16.ebuild 3667 RMD160 1e42b9783d6aec37f19033e8d54c36c7cfebe2e2 SHA1 c8afc0c033632551bcfec9823308d3cd752d2de4 SHA256 2a3b8ab2deb3ef845f16c6855a1c720bc93d66214ff79e1d40cc91d155b85ae3
+MISC ChangeLog 18916 RMD160 1085398e98d1325523c275360fc5e90c162fec3a SHA1 e84ca9e42c7e0da6c6d5e7fa7c30b7b9caf125cd SHA256 28d63f9216f4ac6c1bb316c0f8686b2cb2433b39aa834d779a5764784a6598f7
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJODTwrAAoJEHQ6UuhrqBBQCNQQAJ/aGx0dMzCik1Jqap77T/BR
-Q7BrowTBEnQ4Ko6eO6NhueeeSxlLgizsjXcJifGmMWL3HbLDerBjOttLOU375rv+
-DNf82nyB1XjRvVvNxO2SInV/iD8QAMy3fcXIHHuoxRyxIsCKwSvHdpqH4TIebhCM
-i/A0cOSsjSZWQ56DWCnBl7g+s6ztstxgh1IkNnJRnkYq6NdbmNZhzaByFOMO3oxq
-x7aiQIf5t23xlzV6GRJjZSg5AUnu9ZSCosu8zueGiLj5Hz+83UEs92L3ltjQvypm
-elZr6qAfwukhK1DJoy2z82tIBn1yYSggqmxJD6FD9unmP01z2bOYU0hot4CzWgbn
-cqJtZBXAL+GQUxu3KYjHhfngKK7kaGi1avAUQI/zydjV86W6I4djz/6kyNCMjrIx
-PPDJj2LqgEw5O1PbjD3C8zPIGg2AO4fBBT1fFjwk/wTpNlsZprdNqvhgoqtC1q1f
-qLmtPomlaR03J0vkCbU/srwdO1jYoqfV46SvSGlEG2bo3i+HibZOBpebK0Ou18Yi
-9XN6dFVYlzYB/LkGtKaAz3S2BzqxB8KmQGOJT6OenaAGsSrRkbSxOv6jq04e2D/e
-9TiLKi5Sxtdjwlk7nZfCocdAwMiGEM0/mVHhUkgeghEMS+yJDc+CwLqKUxhs4QW7
-p1nnnlC17nASXnT1/XhN
-=DbJD
+iQIcBAEBCAAGBQJODlThAAoJEHQ6UuhrqBBQh8kP/3w639RHviGiwnXxwft5TC+m
+JAtISXhl7Xty3NfECRxjBuDrFpixFpnu8AfpmBa9WnPbM6aRyj9phK6P3mdqLc2z
+vHHXCa6AU+LKHfYKRAlJvgUW9eZhQwlHH7duMEAaqsfBu1E1k5MU7O6GebbeidOG
+3FBnvt/AZg0OQj18l4a4MjZntluRwzCMFLBWNhg/L2SLI2HPtb/7DSnCLwp6OpW1
+53eJmeDJ30Qm3/SnJNSh6iaDE6G5PNodxIRiMc5kYMYiIFtQvB3KrP0wa9PIHA15
+Mvr0QcjSzTG5WZX5KnWNgqH+lgNE/VWltzkTW3UVmhu8FcigrizPO6m5Hn2u4ZF6
+u+rwD5aE0V9iYiFhMuTBLBaMXTSjhK0Aa5grhOawJg/usgUoEzxfkt1eEgakOa5I
+iyALn9f/Eo5N1uWIS0JltTpj23q3yqnI/WyNcbqGLT6FhCaQUvyjoDZJdEnUhmnr
+6irrHrJujqcc3q1EpfA5Lcl0LCJakffCFd5Jq7yzRxWiAZaung97Mlr0dZXK/sCq
+6loFPHSpW9rJUSkJH3tEYfIqL/K/1fCqLlgP6BuLdNsz4zws+yy5WPmimAyFTTEa
+Rw9f6zFwiwsMM5P4bJQ/GPQ3gZHdsVXGjLPRqAYL7Sz7V/LCCSXiLOME/UzI8SRf
+l3b4xrZWiog26GOgCV6K
+=Q+2J
 -----END PGP SIGNATURE-----
